# biblioteca_qt

./: CMakeLists.txt  README.md  main.cpp  readme.md  recursos.qrc  style.qss
